chore: add path-based routing for actors
